--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Hello, this is my updated website!</h1>
+ <h2>This is the homepage (from new branch)</h2>
 </body>
 </html>
 
